--- a/roles/qpixel/tasks/remove.yml
+++ b/roles/qpixel/tasks/remove.yml
@@ -4,8 +4,6 @@
     name: lokal
     tasks_from: remove
   vars:
-    app: "{{qpixel_domain}}"
-    mysql_db: "{{qpixel_mysql_db}}"
-    mysql_user: "{{qpixel_mysql_user}}"
-    minio_buncke: "{{qpixel_minio_bucket}}"
-    minio_user: "{{qpixel_minio_user}}"
+    app_domain: "{{qpixel_domain}}"
+    app_db: "mysql"
+    app_bucket: "minio"
