--- a/roles/qpixel/defaults/main.yml
+++ b/roles/qpixel/defaults/main.yml
@@ -1,4 +1,8 @@
 qpixel_community_name: Lokal community
 qpixel_subdomain: qpixel
 qpixel_domain: "{{qpixel_subdomain}}.{{domain}}"
-qpixel_version: 2024.3.1
+qpixel_version: 2024.7.1
+
+# qpixel_logo: "relative-to-cwd/logo.png"
+# qpixel_logo_small: "relative-to-cwd/logo-s.png"
+# qpixel_icon: "relative-to-cwd/favicon.ico"
