--- a/roles/_example/tasks/install.yml
+++ b/roles/_example/tasks/install.yml
@@ -5,13 +5,13 @@
     tasks_from: install
   vars:
     app: your-app
-    data_dirs:
+    app_dirs:
     - data
     - config
-    mysql_db: "{{mysql_yourapp}}"
-    mysql_user: "{{mysql_user_yourapp}}"
-    mysql_password: "{{mysql_password_yourapp}}"
-    start: false # you can postpone starting (by defaults the container starts)
+    app_templates:
+      service.conf: config/service.conf
+    app_db: "mysql"
+    app_start: false # you can postpone starting (by defaults the container starts)
 
 - name: Example copy of a file in your files/ folder
   ansible.builtin.copy:
@@ -19,16 +19,10 @@
     dest: "{{app_root}}/data/some-file.txt" # {{app_root}} is accessible because the lokal.install already ran
     force: false
 
-- name: Example copy of a file in your files/ folder
-  ansible.builtin.template:
-    src: "service.conf.j2"  # path is relative to templates/
-    dest: "{{app_root}}/config/service.conf" # {{app_root}} is accessible because the lokal.install already ran
-    force: false
-
 # You can do more steps before finally launching your application
 
 # This is the command to start your app manually
 - name: Start the app
-  ansible.builtin.shell: 
+  ansible.builtin.shell:
     cmd: "docker compose up -d"
     chdir: "{{app_root}}"
