--- a/roles/_example/templates/compose.yml
+++ b/roles/_example/templates/compose.yml
@@ -4,9 +4,9 @@ services:
     image: yourapp:{{version_yourapp}}
     user: "{{uid}}:{{gid}}"  # run the container service as app user (not root)
     environment:
-      MYSQL_USER: {{mysql_user_yourapp}}
-      MYSQL_PASSWORD: {{mysql_password_yourapp}}
-      MYSQL_DATABASE: {{mysql_database_yourapp}}
+      MYSQL_DATABASE: {{app_db_name}}      # db credentials might be auto-generated
+      MYSQL_USER: {{app_db_user}}          # if you don't specify them manually
+      MYSQL_PASSWORD: {{app_db_password}}  # and you shouldn't really - it's safer
       MYSQL_HOST: {{mysql_host}}
     ports:
     - '9099' # exported ports will be accessible from outside, if you allow them in firewall as well
@@ -18,15 +18,7 @@ services:
     - traefik # necessary for extenal access to your app (via a domain name)
     - mysql # necessary if you want to use the external mysql database
     - prometheus
-    labels:
-      traefik.enable: "true"
-      traefik.http.routers.yourapp.entrypoints: websecure
-      traefik.http.routers.yourapp.rule: Host(`{{subdomain_yourapp}}.{{domain}}`)
-      traefik.http.routers.yourapp.tls: "true"
-      traefik.http.services.yourapp.loadbalancer.server.port: 80
-{% if ssl_use_acme %} # please keep this part to have automatic certificate issue and renewal
-      traefik.http.routers.yourapp.tls.certresolver: {{cert_resolver}}
-{% endif %}
+{% include "labels.yml" %}  # labels expect app_domain to be set and app_port to be set if different than 80
 
 networks:
   traefik:
